# backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: mypy.yml
authentication/: admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
authentication/middleware/: verified_middleware.py
authentication/migrations/: 0001_initial.py  0002_user_otp.py  0003_profile.py  0004_alter_profile_user.py
backend/: settings.py  urls.py
blogs/: admin.py  models.py  serializers.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_comments_post_alter_comments_user_and_more.py
core/: exception_handler.py  permissions.py  response.py
