[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A backend for our project in LSPP Product Launch"
authors = ["Nishant Sapkota <snishant306@gmail.com>", "Aditi Kharel <aditikharel246@gmail.com>", "Anupama Rai <anuraie1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
